--- a/css/main.css
+++ b/css/main.css
@@ -761,6 +761,7 @@ p > a {
 .colWrapper {
     opacity: 0;
 }
+/*
 @-webkit-keyframes fadeout {
     0% {
         opacity: 1;
@@ -861,6 +862,7 @@ p > a {
     animation-fill-mode: forwards;
     animation-iteration-count: 1;
 }
+*/
 /* ===============================
    Portfolio
    =============================== */
