--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
 		</div>
 		<div class="col-lg-4">
 			<h2>I am currently available for hire!</h2>
-			<h6>No project is too big or too small, if you like my work, feel free to say hello! Or hey, say hello even if you dislike my work!</h6>			
+			<h6>Like my work? Feel free to say hello! Or hey, say hello even if you dislike my work!</h6>			
 		</div>
 		<div class="col-lg-4">
 			<div class="social">
