--- a/css/main.css
+++ b/css/main.css
@@ -898,6 +898,7 @@ p > a {
     display: none;
 }
 .box figure img {
+    width:70%;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
@@ -1136,6 +1137,7 @@ p > a {
         overflow: hidden;
     }
     .box figure img {
+        width:inherit;
         -webkit-transition: -webkit-transform 0.4s ease-in-out;
         -moz-transition: -moz-transform 0.4s ease-in-out;
         transition: transform 0.4s ease-in-out;
