--- a/css/main.css
+++ b/css/main.css
@@ -905,7 +905,7 @@ p > a {
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
 }
-.alldindauti img, .slugfeast img, .tjanster img {
+.alldindauti img, .slugfeast img, .tjanster img, .lemonbite img {
     width: 50% !important;
 }
 .box.fifa {
