--- a/css/main.css
+++ b/css/main.css
@@ -990,7 +990,6 @@ p > a {
 .site-footer .social .fa:hover {
     color:#0784BE;
 }
-
 .pagenav {
     float:left;
 }
@@ -1016,7 +1015,9 @@ p > a {
     font-size:24px;
     position: relative;
     top: 50%;
-    transform: translateY(-50%);    
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);    
 }
 .pagenavWrapper:before, .pagenavWrapper:after {
     content: " ";
