--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -36,6 +36,9 @@
 			{% else %}
 			{% endif %}
 	    </nav>
+	    <span class="uparrow" id="uparrow">
+	    	<i class="fa fa-angle-up"></i>
+	    </span>	    
     </div>
     {% include footer.html %}
 
