--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,6 @@
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">	
 	<script type="text/javascript" src="//use.typekit.net/uca4rfy.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>	
+	<script type="text/javascript" src="{{ "/js/vendor/jquery-2.1.1.min.js" | prepend: site.baseurl }}"></script>
+	<script type="text/javascript" src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
 </head>
