--- a/css/main.css
+++ b/css/main.css
@@ -993,8 +993,7 @@ p > a {
 .pagenav {
     float:left;
 }
-.pagenav .pagenavitem,
-.uparrow {
+.pagenav .pagenavitem {
     width:50px;
     height:50px;
     background:#222;    
@@ -1008,12 +1007,10 @@ p > a {
 .pagenav a {
     text-decoration: none;    
 }
-.pagenav .pagenavitem:hover,
-.uparrow:hover {
+.pagenav .pagenavitem:hover {
     background:#0784BE;   
 }
-.pagenav .fa,
-.uparrow .fa {
+.pagenav .fa {
     color:#fff;
     font-size:24px;
     position: relative;
@@ -1029,9 +1026,7 @@ p > a {
 .pagenavWrapper:after {
     clear: both;
 }
-.uparrow {
-    float:right;
-}
+
 
 @media (min-width: 768px) {
     .box {
