added baseurl in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <header>
-  <h1>Daniel <br>Nikolovski</h1>
+  <a href="{{ site.url }}"><h1>Daniel <br>Nikolovski</h1></a>
   <h4>Web / UX / SEO</h4>
 </header>
