open graph stuff

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,9 +2,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta property="og:title" content="Daniel Nikolovski">
-	<meta property="og:description" content="Web / UX / SEO">	
-	<meta property="og:image" content="http://danielnikolovski.com/files/danielnikolovski.png">
+	<meta property="og:title" content="Daniel Nikolovski" />
+	<meta property="og:description" content="Web / UX / SEO" />	
+	<meta property="og:image" content="http://danielnikolovski.com/files/danielnikolovski.png" />
 	<meta name="thumbnail" content="http://danielnikolovski.com/files/danielnikolovski.png" />
 	<meta name="description" content="{{ site.description }}">
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>    
