--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,11 @@
 <header>
   <a href="{{ site.url }}"><h1>Daniel <br>Nikolovski</h1></a>
-  <h4>Webb / UX / SEO</h4>
+  <div class="hcontainer">
+    <h4>Webb / UX / SEO</h4>
+    <nav class="nav">
+      <a><h5>Blogg</h5></a>
+      <a><h5>Om mig</h5></a>
+      <a><h5>Kontakt</h5></a>
+    </nav>
+  </div>
 </header>
