--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
   <div class="hcontainer">
     <h4>Webb / UX / SEO</h4>
     <nav class="nav">
-      <a><h5>Blogg</h5></a>
-      <a><h5>Om mig</h5></a>
-      <a><h5>Kontakt</h5></a>
+      <a href="/blogg"><h5>Blogg</h5></a>
+      <a href="/om"><h5>Om mig</h5></a>
+      <a href="/kontakt"><h5>Kontakt</h5></a>
     </nav>
   </div>
 </header>
