--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 			<h6>Eslöv, Skåne</h6>
 			<p><a href="mailto:hello@danielnikolovski.com">hello@danielnikolovski.com</a></p>
 			<p><a href="tel:+46709289050">+46 737 63 57 63</a></p>
-			<p><a href="{{ "/files/CV.pdf" | prepend: site.baseurl }}" target="_blank">Ladda ner mitt CV</a></p>
+			<p><a href="{{ "/files/cv.pdf" | prepend: site.baseurl }}" target="_blank">Ladda ner mitt CV</a></p>
 		</div>
 		<div class="col-lg-4">
 			<h2>Jag är för närvarande uppbokad till Juli 2015!</h2>
