--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,8 @@
 	<link rel="stylesheet" href="{{ "/css/normalize.css" | prepend: site.baseurl }}">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="{{ "/js/vendor/jquery-2.1.1.min.js" | prepend: site.baseurl }}"></script>
+
 	<script type="text/javascript" src="//use.typekit.net/uca4rfy.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>	
 	<script type="text/javascript" src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
