--- a/css/main.css
+++ b/css/main.css
@@ -1358,6 +1358,7 @@ p.default {
     font-size: 0;
     background:#fff;
     text-indent: -9999px;
+    z-index:9999;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -1518,27 +1519,13 @@ Nav animations
   position: absolute;
   right: 0;
   bottom: 8%;
+  z-index:9999;
 }
 .nav-open {
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
     transform: scale(1);
     max-height: 500px;
-}
-@-webkit-keyframes slide {
-    100% {
-        -webkit-transform: scale(1);
-    }
-}
-@-moz-keyframes slide {
-    100% {
-        -moz-transform: scale(1);
-    }
-}
-@keyframes slide {
-    100% {
-        transform: scale(1);
-    }
 }
 
 @-webkit-keyframes FadeIn {
