--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,12 +2,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta property="og:url" content="http://danielnikolovski.com" />
-	<meta property="og:title" content="Daniel Nikolovski" />
-	<meta property="og:description" content="Webb / UX / SEO" />
-	<meta property="og:image" content="http://danielnikolovski.com/files/daniel-nikolovski.png" />
-	<meta name="thumbnail" content="http://danielnikolovski.com/files/daniel-nikolovski-plus.png" />
+	<meta property="og:url" content="http://danielnikolovski.com">
+	<meta property="og:title" content="Daniel Nikolovski">
+	<meta property="og:description" content="Webb / UX / SEO">
+	<meta property="og:image" content="http://danielnikolovski.com/files/daniel-nikolovski.png">
+	<meta name="thumbnail" content="http://danielnikolovski.com/files/daniel-nikolovski-plus.png">
 	<meta name="description" content="{{ site.description }}">
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@danneniko">
+	<meta name="twitter:title" content="Daniel Nikolovski">
+	<meta name="twitter:description" content="Webb / UX / SEO">
+	<meta name="twitter:image" content="http://danielnikolovski.com/files/daniel-nikolovski.png">
+
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="{{ "/css/normalize.css" | prepend: site.baseurl }}">
