--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta property="og:url" content="http://danielnikolovski.com">
 	<meta property="og:title" content="Daniel Nikolovski">
+	<meta property="og:type" content="website">
 	<meta property="og:description" content="Webb / UX / SEO">
 	<meta property="og:image" content="http://danielnikolovski.com/files/daniel-nikolovski.png">
 	<meta name="thumbnail" content="http://danielnikolovski.com/files/daniel-nikolovski-plus.png">
