--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:site" content="@danneniko" />
 	<meta name="twitter:title" content="Daniel Nikolovski" />
-	<meta name="twitter:description" content="Webb / UX / SEO" />
+	<meta name="twitter:description" content="Web / UX / SEO" />
 	<meta name="twitter:image" content="http://danielnikolovski.com/files/daniel-nikolovski.png" />
 
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
