--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 	<meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
 	<meta property="og:title" content="Daniel Nikolovski" />
 	<meta property="og:type" content="website" />
-	<meta property="og:description" content="Webb / UX / SEO" />
+	<meta property="og:description" content="Web / UX / SEO" />
 	<meta property="og:image" content="http://danielnikolovski.com/files/daniel-nikolovski.png" />
 	<meta name="thumbnail" content="http://danielnikolovski.com/files/daniel-nikolovski-plus.png" />
 	<meta name="description" content="{{ site.description }}" />
