--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
   </div>
 
 </div>
-    <h4 class="visible-xs">Webb / UX / SEO</h4>
+    <h4 class="visible-xs">Web / UX / SEO</h4>
 
   <div class="hcontainer">
     <div class="navwrapper">
