--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,6 +38,6 @@
       </div>
     </div>
   </div>
-  <h4 class="hidden-xs">Webb / UX / SEO</h4>
+  <h4 class="hidden-xs">Web / UX / SEO</h4>
 
 </header>
