--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
 	<meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
 	<meta name="twitter:description" content="Web / UX / SEO" />
 	<meta name="twitter:image" content="http://danielnikolovski.com/files/daniel-nikolovski.png" />
-
+	<meta name="google-site-verification" content="QEIQBKRPZG2H0XwrZ8myjXIUkro5Fx0ZPNDGTl2er_U" />
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="{{ "/css/normalize.css" | prepend: site.baseurl }}">
