--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 			<p><a href="{{ "/files/cv.pdf" | prepend: site.baseurl }}" target="_blank">Ladda ner mitt CV</a></p>
 		</div>
 		<div class="col-lg-4 col-md-4">
-			<h2>Jag är för närvarande uppbokad till Oktober 2015!</h2>
+			<h2>Jag är för närvarande uppbokad till November 2015!</h2>
 			<h6>Vill du boka in ett projekt? eller om du bara har något annat kul i tankarna är du varmt välkommen att höra av dig!</h6>
 		</div>
 		<div class="col-lg-4 col-md-4">
