--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,16 +19,16 @@
         <a href="{{ site.url }}/"><h5>Portfolio</h5></a>
         {% endif %}
 
-        {% if page.active == "om" %}
-          <a href="{{ site.url }}/om" class="current"><h5>Om mig</h5></a>
+        {% if page.active == "about" %}
+          <a href="{{ site.url }}/about" class="current"><h5>Who I am</h5></a>
         {% else %}
-          <a href="{{ site.url }}/om"><h5>Om mig</h5></a>
+          <a href="{{ site.url }}/about"><h5>Who I am</h5></a>
         {% endif %}
 
-        {% if page.active == "artiklar" %}
-          <a href="{{ site.url }}/artiklar" class="current"><h5>Artiklar</h5></a>      
+        {% if page.active == "articles" %}
+          <a href="{{ site.url }}/articles" class="current"><h5>Articles</h5></a>      
         {% else %}
-        <a href="{{ site.url }}/artiklar"><h5>Artiklar</h5></a>    
+        <a href="{{ site.url }}/articles"><h5>Articles</h5></a>    
         {% endif %}  
       </nav>
       <div class="nav-switch-wrapper pull-right hidden-xs">
