--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,19 +3,19 @@
 	<div class="row">
 		<div class="col-lg-4 col-md-4 contact">
 			<h2>Daniel Nikolovski</h2>
-			<h6>Eslöv, Skåne</h6>
+			<h6>Eslöv, Sweden</h6>
 			<p><a href="mailto:hello@danielnikolovski.com">hello@danielnikolovski.com</a></p>
 			<p><a href="tel:+46709289050">+46 737 63 57 63</a></p>
-			<p><a href="{{ "/files/cv.pdf" | prepend: site.baseurl }}" target="_blank">Ladda ner mitt CV</a></p>
+			<p><a href="{{ "/files/cv.pdf" | prepend: site.baseurl }}" target="_blank">Download my resume</a></p>
 		</div>
 		<div class="col-lg-4 col-md-4">
-			<h2>Jag är för närvarande uppbokad till November 2015!</h2>
-			<h6>Vill du boka in ett projekt? eller om du bara har något annat kul i tankarna är du varmt välkommen att höra av dig!</h6>
+			<h2>I am available for hire from November 2015</h2>
+			<h6>Like my work? Feel free to say hello! Or hey, say hello even if you dislike my work!</h6>
 		</div>
 		<div class="col-lg-4 col-md-4">
 			<div class="social">
 				<a href="https://twitter.com/danneniko" target="_blank"><i class="fa fa-twitter"></i></a>
-				<a href="https://google.com/+DanielNikolovski1" target="_blank"><i class="fa fa-google-plus"></i></a>
+				<a href="https://google.com/+DanielNikolovski1" target="_blank"><img src="{{ "/img/gplus.svg" | prepend: site.baseurl }}"></a>
 				<a href="https://www.facebook.com/danielnikolovskicom" target="_blank"><i class="fa fa-facebook"></i></a>
 				<a href="https://github.com/danneniko" target="_blank"><i class="fa fa-github"></i></a>
 				<a href="https://www.linkedin.com/in/danneniko" target="_blank"><i class="fa fa-linkedin"></i></a>
