--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,18 +2,40 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
-	<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
-	<meta property="og:type" content="website" />
-	<meta property="og:description" content="Web / UX / SEO" />
-	<meta property="og:image" content="http://danielnikolovski.com/files/daniel-nikolovski.png" />
-	<meta name="thumbnail" content="http://danielnikolovski.com/files/daniel-nikolovski-plus.png" />
-	<meta name="description" content="{{ site.description }}" />
-	<meta name="twitter:card" content="summary" />
-	<meta name="twitter:site" content="@danneniko" />
-	<meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
-	<meta name="twitter:description" content="Web / UX / SEO" />
-	<meta name="twitter:image" content="http://danielnikolovski.com/files/daniel-nikolovski.png" />
+	<meta content="{{ site.title }}" property="og:site_name">
+	{% if page.title %}
+	  <meta content="{{ page.title }}" property="og:title">
+	{% else %}
+	  <meta content="{{ site.title }}" property="og:title">
+	{% endif %}
+	{% if page.title %}
+	  <meta content="article" property="og:type">
+	{% else %}
+	  <meta content="website" property="og:type">
+	{% endif %}
+	{% if page.description %}
+	  <meta content="{{ page.description }}" property="og:description">
+	{% else %}
+	  <meta content="{{ site.description }}" property="og:description">
+	{% endif %}
+	{% if page.url %}
+	  <meta content="{{ site.url }}{{ page.url }}" property="og:url">
+	{% endif %}
+	{% if page.image %}
+	  <meta content="/img/socialimages/{{ page.image }}" property="og:image">
+	{% else %}
+	  <meta content="/files/daniel-nikolovski.png" property="og:image">
+	{% endif %}
+	{% if page.categories %}
+	  {% for category in page.categories limit:1 %}
+	  <meta content="{{ category }}" property="article:section">
+	  {% endfor %}
+	{% endif %}
+	{% if page.tags %}
+	  {% for tag in page.tags %}
+	  <meta content="{{ tag }}" property="article:tag">
+	  {% endfor %}
+	{% endif %}	
 	<meta name="google-site-verification" content="QEIQBKRPZG2H0XwrZ8myjXIUkro5Fx0ZPNDGTl2er_U" />
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
