--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,6 +36,27 @@
 	  <meta content="{{ tag }}" property="article:tag">
 	  {% endfor %}
 	{% endif %}	
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@danneniko">
+	<meta name="twitter:creator" content="@danneniko">
+	{% if page.title %}
+	  <meta name="twitter:title" content="{{ page.title }}">
+	{% else %}
+	  <meta name="twitter:title" content="{{ site.title }}">
+	{% endif %}
+	{% if page.url %}
+	  <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
+	{% endif %}
+	{% if page.description %}
+	  <meta name="twitter:description" content="{{ page.description }}">
+	{% else %}
+	  <meta name="twitter:description" content="{{ site.description }}">
+	{% endif %}
+	{% if page.image %}
+	  <meta name="twitter:image:src" content="{{ site.url }}/img/socialimages/{{ page.image }}">
+	{% else %}
+	  <meta name="twitter:image:src" content="{{ site.url }}/files/daniel-nikolovski.png">
+	{% endif %}	
 	<meta name="google-site-verification" content="QEIQBKRPZG2H0XwrZ8myjXIUkro5Fx0ZPNDGTl2er_U" />
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
