--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
 		<div class="col-lg-4 col-md-4">
 			<div class="social">
 				<a href="https://twitter.com/danneniko" target="_blank"><i class="fa fa-twitter"></i></a>
-				<a href="https://google.com/+DanielNikolovski1" target="_blank"><img src="{{ "/img/gplus.svg" | prepend: site.baseurl }}"></a>
+				<a href="https://plus.google.com/+Danielnikolovskiweb" target="_blank"><img src="{{ "/img/gplus.svg" | prepend: site.baseurl }}"></a>
 				<a href="https://www.facebook.com/danielnikolovskicom" target="_blank"><i class="fa fa-facebook"></i></a>
 				<a href="https://github.com/danneniko" target="_blank"><i class="fa fa-github"></i></a>
 				<a href="https://www.linkedin.com/in/danneniko" target="_blank"><i class="fa fa-linkedin"></i></a>
