--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,12 +8,26 @@ active: artiklar
   {% include head.html %}
 
   <body class="container">
-
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/sv_SE/sdk.js#xfbml=1&version=v2.5&appId=1580649428855915";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
     {% include header.html %}
 
     <main class="mainContent subpage cf">
         <div class="post">
           {{ content }}
+          <div class="socialshare">
+          <div class="fb-share-button" data-href="{{site.url}}{{page.url}}" data-layout="button"></div>                      
+          <a href="https://twitter.com/share" class="twitter-share-button"{count} data-via="danneniko">Tweet</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<g:plus action="share"></g:plus>          
+          </div>
       </div>
     </main>
     <!-- 
