--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 			<p><a href="{{ "/files/cv-en.pdf" | prepend: site.baseurl }}" target="_blank">Download my resume</a></p>
 		</div>
 		<div class="col-lg-4 col-md-4">
-			<h2>I am available for hire from January 2016</h2>
+			<h2>I am currently only available for remote work</h2>
 			<h6>Like my work? Feel free to say hello! Or hey, say hello even if you dislike my work!</h6>
 		</div>
 		<div class="col-lg-4 col-md-4">
