added h5 and donii

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,11 @@
       <span>toggle menu</span>
     </button>
   </div>
-
+  {% if page.active == "about" %}
+  <div class="anticontainer">
+    <img class="portfolioItem" src="../img/mebig.jpg" alt="">
+  </div>
+  {% endif %}
 </div>
     <h4 class="visible-xs">Web / UX / SEO</h4>
 
