--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,9 @@
 			<h2>Daniel Nikolovski</h2>
 			<h6>Eslöv, Sweden</h6>
 			<p><a href="mailto:hello@danielnikolovski.com">hello@danielnikolovski.com</a></p>
+			<p><a href="tel:+46700540399">+46 700 54 03 99</a></p>			
 			<p><a href="tel:+46709289050">+46 737 63 57 63</a></p>
+
 			<p><a href="{{ "/files/cv-en.pdf" | prepend: site.baseurl }}" target="_blank">Download my resume</a></p>
 		</div>
 		<div class="col-lg-4 col-md-4">
