--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,7 @@
 		<div class="col-lg-4 col-md-4">
 			<h2>I am currently only available for remote work</h2>
 			<h6>Like my work? Feel free to say hello! Or hey, say hello even if you dislike my work!</h6>
+			<h6>Also, every now and then I work on my <a href="http://grindtime.io">SEO blog</a></h6>
 		</div>
 		<div class="col-lg-4 col-md-4">
 			<div class="social">
