--- a/css/main.css
+++ b/css/main.css
@@ -1354,7 +1354,8 @@ div#___plus_0 {
     margin-bottom: 24px;
 }
 .presentation p > a,
-.default a {
+.default a,
+a.footerlink {
     position: relative;
     font-weight: 400;
     text-align: center;
